--- a/src/view/home.html
+++ b/src/view/home.html
@@ -10,7 +10,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Mercado Liebre</title>
   </head>
   <body>
@@ -18,7 +18,7 @@
       <div class="header-top">
         <img src="./images/logo-mercado-liebre.svg" />
         <input type="search" />
-        <p>Compra en cuenta y sin tarjeta de credito</p>
+        <p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de credito</p>
       </div>
       <div class="header-menu">
         <i class="fas fa-bars"></i>
@@ -31,9 +31,15 @@
           <li><a href="#">Ayuda</a></li>
         </ul>
         <ul>
-          <li><a href="#">Creá tu cuenta</a></li>
-          <li><a href="#">Ingresá</a></li>
-          <li><a href="#">Mis compras</a></li>
+          <li>
+            <a href="#">Creá tu cuenta<i class="far fa-address-card"></i></a>
+          </li>
+          <li>
+            <a href="#">Ingresá<i class="fas fa-sign-in-alt"></i></a>
+          </li>
+          <li>
+            <a href="#">Mis compras<i class="fas fa-shopping-basket"></i></a>
+          </li>
             
         </ul>
       </div>
@@ -78,41 +84,44 @@
       <section>
         <h2>Sección de Ofertas</h2>
         <article class="productos">
-            <img src="./images/cafetera.jpg" />
-            <div class="infoArt">
-              <p>$6.770</p>
-              <p>40% OFF</p>
-              <p>Cafetera Moulinex</p>
-            </div>
-          </article>
-          <article class="productos">
-            <img src="./images/mac.jpg" />
-            <div class="infoArt">
-              <p>$230.000</p>
-              <p>20% OFF</p>
-              <p>MacBook Pro 2019</p>
-            </div>
-          </article>
-          <article class="productos">
-            <img src="./images/telsamsung.jpg" />
-            <div class="infoArt">
-              <p>$70.500</p>
-              <p>10% off</p>
-              <p>Samsung Galaxy S10</p>
-            </div>
-          </article>
-          <article class="productos">
-            <img src="./images/tele.jpg" />
-            <div class="infoArt">
-              <p>$23.200</p>
-              <p>5% off</p>
-              <p>SmartTv Samsung 43"</p>
-            </div>
-          </article>
+          <img src="./images/cafetera.jpg" />
+          <div class="infoArt">
+            <p>$6.770</p>
+            <p>40% OFF</p>
+            <p>Cafetera Moulinex</p>
+          </div>
+        </article>
+        <article class="productos">
+          <img src="./images/mac.jpg" />
+          <div class="infoArt">
+            <p>$230.000</p>
+            <p>20% OFF</p>
+            <p>MacBook Pro 2019</p>
+          </div>
+        </article>
+        <article class="productos">
+          <img src="./images/telsamsung.jpg" />
+          <div class="infoArt">
+            <p>$70.500</p>
+            <p>10% off</p>
+            <p>Samsung Galaxy S10</p>
+          </div>
+        </article>
+        <article class="productos">
+          <img src="./images/tele.jpg" />
+          <div class="infoArt">
+            <p>$23.200</p>
+            <p>5% off</p>
+            <p>SmartTv Samsung 43"</p>
+          </div>
+        </article>
       </section>
     </main>
     <footer>
-      <section>
+      <section class='footet-section'>
+        <div>
+          <i class="far fa-credit-card"></i>
+        </div>
         <p>
           Pagá con tarjeta o en efectivo Con Mercado Liebre Cash, tenés cuotas
           sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es
@@ -120,7 +129,10 @@
         </p>
       </section>
 
-      <section>
+      <section class='footet-section'>
+        <div>
+            <i class="far fa-credit-card"></i>
+          </div>
         <p>
           Envío gratis desde $ 2.500 Solo por estar registrad@ en Mercado Liebre
           tenés envíos gratis en miles de productos. Es un beneficio de Mercado
@@ -128,7 +140,10 @@
         </p>
       </section>
 
-      <section>
+      <section class='footet-section'>
+        <div>
+            <i class="far fa-credit-card"></i>
+          </div>
         <p>
           Seguridad, de principio a fin ¿No te gusta? ¡Devolvelo! En Mercado
           Liebre, no hay nada que no puedas hacer, porque estás siempre
@@ -136,7 +151,7 @@
         </p>
       </section>
 
-      <section>
+      <section class='footet-section'>
         <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
       </section>
     </footer>
