--- a/src/view/home.html
+++ b/src/view/home.html
@@ -18,7 +18,10 @@
       <div class="header-top">
         <img src="./images/logo-mercado-liebre.svg" />
         <input type="search" />
-        <p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de credito</p>
+        <p>
+          <i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta
+          de credito
+        </p>
       </div>
       <div class="header-menu">
         <i class="fas fa-bars"></i>
@@ -50,6 +53,9 @@
         <article class="productos">
           <img src="./images/cafetera.jpg" />
           <div class="infoArt">
+            <div>
+              <i class="fas fa-truck"></i>
+            </div>
             <p>$6.770</p>
             <p>40% OFF</p>
             <p>Cafetera Moulinex</p>
@@ -58,6 +64,9 @@
         <article class="productos">
           <img src="./images/mac.jpg" />
           <div class="infoArt">
+            <div>
+              <i class="fas fa-truck"></i>
+            </div>
             <p>$230.000</p>
             <p>20% OFF</p>
             <p>MacBook Pro 2019</p>
@@ -66,6 +75,9 @@
         <article class="productos">
           <img src="./images/telsamsung.jpg" />
           <div class="infoArt">
+            <div>
+              <i class="fas fa-truck"></i>
+            </div>
             <p>$70.500</p>
             <p>10% off</p>
             <p>Samsung Galaxy S10</p>
@@ -74,6 +86,9 @@
         <article class="productos">
           <img src="./images/tele.jpg" />
           <div class="infoArt">
+            <div>
+              <i class="fas fa-truck"></i>
+            </div>
             <p>$23.200</p>
             <p>5% off</p>
             <p>SmartTv Samsung 43"</p>
@@ -86,6 +101,9 @@
         <article class="productos">
           <img src="./images/cafetera.jpg" />
           <div class="infoArt">
+            <div>
+              <i class="fas fa-truck"></i>
+            </div>
             <p>$6.770</p>
             <p>40% OFF</p>
             <p>Cafetera Moulinex</p>
@@ -94,6 +112,9 @@
         <article class="productos">
           <img src="./images/mac.jpg" />
           <div class="infoArt">
+            <div>
+              <i class="fas fa-truck"></i>
+            </div>
             <p>$230.000</p>
             <p>20% OFF</p>
             <p>MacBook Pro 2019</p>
@@ -102,6 +123,9 @@
         <article class="productos">
           <img src="./images/telsamsung.jpg" />
           <div class="infoArt">
+            <div>
+              <i class="fas fa-truck"></i>
+            </div>
             <p>$70.500</p>
             <p>10% off</p>
             <p>Samsung Galaxy S10</p>
@@ -110,6 +134,9 @@
         <article class="productos">
           <img src="./images/tele.jpg" />
           <div class="infoArt">
+            <div>
+              <i class="fas fa-truck"></i>
+            </div>
             <p>$23.200</p>
             <p>5% off</p>
             <p>SmartTv Samsung 43"</p>
@@ -118,7 +145,7 @@
       </section>
     </main>
     <footer>
-      <section class='footet-section'>
+      <section class="footet-section">
         <div>
           <i class="far fa-credit-card"></i>
         </div>
@@ -129,10 +156,10 @@
         </p>
       </section>
 
-      <section class='footet-section'>
+      <section class="footet-section">
         <div>
-            <i class="far fa-credit-card"></i>
-          </div>
+          <i class="far fa-credit-card"></i>
+        </div>
         <p>
           Envío gratis desde $ 2.500 Solo por estar registrad@ en Mercado Liebre
           tenés envíos gratis en miles de productos. Es un beneficio de Mercado
@@ -140,10 +167,10 @@
         </p>
       </section>
 
-      <section class='footet-section'>
+      <section class="footet-section">
         <div>
-            <i class="far fa-credit-card"></i>
-          </div>
+          <i class="far fa-credit-card"></i>
+        </div>
         <p>
           Seguridad, de principio a fin ¿No te gusta? ¡Devolvelo! En Mercado
           Liebre, no hay nada que no puedas hacer, porque estás siempre
@@ -151,7 +178,7 @@
         </p>
       </section>
 
-      <section class='footet-section'>
+      <section class="footet-section">
         <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
       </section>
     </footer>
